--- a/data_top/kodomo.html
+++ b/data_top/kodomo.html
@@ -207,7 +207,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/F2994A/FFFFFF?text=Chidai" alt="チダイ">
+                <img src="../data_top/images/chidai_1.jpg" alt="チダイ">
                 <h2 class="fish-name">チダイ（血鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -228,7 +228,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/BDBDBD/FFFFFF?text=Hedai" alt="ヘダイ">
+                <img src="../data_top/images/hedai_1.jpg" alt="ヘダイ">
                 <h2 class="fish-name">ヘダイ（平鯛）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -249,7 +249,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/4F4F4F/FFFFFF?text=Mutsu" alt="ムツ">
+                <img src="../data_top/images/mutsu_1.jpg" alt="ムツ">
                 <h2 class="fish-name">ムツ</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -270,7 +270,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/56CCF2/FFFFFF?text=Maaji" alt="マアジ">
+                <img src="../data_top/images/maaji_2.jpg" alt="マアジ">
                 <h2 class="fish-name">マアジ（真鯵）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -291,7 +291,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/F2C94C/FFFFFF?text=Kaiwari" alt="カイワリ">
+                <img src="../data_top/images/kaiwari_1.jpg" alt="カイワリ">
                 <h2 class="fish-name">カイワリ</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -312,7 +312,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/F2C94C/FFFFFF?text=Shimaaji" alt="シマアジ">
+                <img src="../data_top/images/shimaaji_1.jpg" alt="シマアジ">
                 <h2 class="fish-name">シマアジ（縞鯵）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -333,7 +333,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/828282/FFFFFF?text=Konoshiro" alt="コノシロ">
+                <img src="../data_top/images/konoshiro_1.jpg" alt="コノシロ">
                 <h2 class="fish-name">コノシロ</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -354,7 +354,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/9B51E0/FFFFFF?text=Kataboshiiwashi" alt="カタボシイワシ">
+                <img src="../data_top/images/kataboshi_1.jpg" alt="カタボシイワシ">
                 <h2 class="fish-name">カタボシイワシ（肩星鰯）</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -375,7 +375,7 @@
             </article>
 
             <article class="kids-card">
-                <img src="https://placehold.co/600x400/2F80ED/FFFFFF?text=Gima" alt="ギマ">
+                <img src="../data_top/images/gima_1.jpg" alt="ギマ">
                 <h2 class="fish-name">ギマ</h2>
                 <dl class="kids-details">
                     <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -401,7 +401,7 @@
                 <p class="toxic-warning">※さわらないでね！</p>
 
                 <article class="kids-card toxic">
-                    <img src="https://placehold.co/600x400/F2C94C/000000?text=Hakofugu" alt="ハコフグ">
+                    <img src="../data_top/images/hakofugu_1.jpg" alt="ハコフグ">
                     <h2 class="fish-name">ハコフグ</h2>
                     <dl class="kids-details">
                         <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -422,7 +422,7 @@
                 </article>
 
                 <article class="kids-card toxic">
-                    <img src="https://placehold.co/600x400/9B51E0/FFFFFF?text=Setominokasago" alt="セトミノカサゴ">
+                    <img src="../data_top/images/setomino_1.jpg" alt="セトミノカサゴ">
                     <h2 class="fish-name">セトミノカサゴ</h2>
                     <dl class="kids-details">
                         <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -443,7 +443,7 @@
                 </article>
 
                 <article class="kids-card toxic">
-                    <img src="https://placehold.co/600x400/333333/FFFFFF?text=Moyoufugu" alt="モヨウフグ">
+                    <img src="../data_top/images/moyou_1.jpg" alt="モヨウフグ">
                     <h2 class="fish-name">モヨウフグ</h2>
                     <dl class="kids-details">
                         <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
@@ -464,7 +464,7 @@
                 </article>
 
                 <article class="kids-card toxic">
-                    <img src="https://placehold.co/600x400/8B5A2B/FFFFFF?text=Kitamakura" alt="キタマクラ">
+                    <img src="../data_top/images/kitamakura_1.jpg" alt="キタマクラ">
                     <h2 class="fish-name">キタマクラ</h2>
                     <dl class="kids-details">
                         <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
