--- a/data_top/zukan.html
+++ b/data_top/zukan.html
@@ -195,7 +195,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/F2994A/FFFFFF?text=Chidai+1" alt="チダイの写真 1">
+                        <img src="..//data_top/images/chidai_1.jpg" alt="チダイの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>チダイ（血鯛）</h3>
@@ -216,8 +216,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/BDBDBD/FFFFFF?text=Hedai+1" alt="ヘダイの写真 1">
-                        <img src="https://via.placeholder.com/350x240/BDBDBD/FFFFFF?text=Hedai+2" alt="ヘダイの写真 2">
+                        <img src="..//data_top/images/hedai_1.jpg" alt="ヘダイの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ヘダイ（平鯛）</h3>
@@ -238,7 +237,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/4F4F4F/FFFFFF?text=Mutsu+1" alt="ムツの写真 1">
+                        <img src="..//data_top/images/mutsu_1.jpg" alt="ムツの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ムツ</h3>
@@ -259,9 +258,8 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/56CCF2/FFFFFF?text=Maaji+1" alt="マアジの写真 1">
-                        <img src="https://via.placeholder.com/350x240/56CCF2/FFFFFF?text=Maaji+2" alt="マアジの写真 2">
-                        <img src="https://via.placeholder.com/350x240/56CCF2/FFFFFF?text=Maaji+3" alt="マアジの写真 3">
+                        <img src="..//data_top/images/maaji_2.jpg" alt="マアジの写真 1">
+                        <img src="..//data_top/images/maaji_1.jpg" alt="マアジの写真 2">
                     </div>
                     <div class="fish-content">
                         <h3>マアジ（真鯵）</h3>
@@ -282,7 +280,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/F2C94C/FFFFFF?text=Kaiwari+1" alt="カイワリの写真 1">
+                        <img src="..//data_top/images/kaiwari_1.jpg" alt="カイワリの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>カイワリ</h3>
@@ -303,7 +301,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/F2C94C/FFFFFF?text=Shimaaji+1" alt="シマアジの写真 1">
+                        <img src="..//data_top/images/shimaaji_1.jpg" alt="シマアジの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>シマアジ（縞鯵）</h3>
@@ -324,7 +322,8 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/828282/FFFFFF?text=Konoshiro+1" alt="コノシロの写真 1">
+                        <img src="..//data_top/images/konoshiro_1.jpg" alt="コノシロの写真 1">
+                        <img src="..//data_top/images/konoshiro_2.jpg" alt="コノシロの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>コノシロ</h3>
@@ -345,7 +344,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/9B51E0/FFFFFF?text=Kataboshiiwashi+1" alt="カタボシイワシの写真 1">
+                        <img src="..//data_top/images/kataboshi_1.jpg" alt="カタボシイワシの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>カタボシイワシ（肩星鰯）</h3>
@@ -366,7 +365,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/2F80ED/FFFFFF?text=Gima+1" alt="ギマの写真 1">
+                        <img src="..//data_top/images/gima_1.jpg" alt="ギマの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ギマ</h3>
@@ -396,7 +395,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/F2C94C/000000?text=Hakofugu+1" alt="ハコフグの写真 1">
+                        <img src="..//data_top/images/hakofugu_1.jpg" alt="ハコフグの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ハコフグ</h3>
@@ -417,7 +416,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/9B51E0/FFFFFF?text=Setominokasago+1" alt="セトミノカサゴの写真 1">
+                        <img src="..//data_top/images/setomino_1.jpg" alt="セトミノカサゴの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>セトミノカサゴ</h3>
@@ -438,7 +437,8 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/333333/FFFFFF?text=Moyoufugu+1" alt="モヨウフグの写真 1">
+                      <img src="..//data_top/images/moyou_1.jpg" alt="モヨウフグの写真 1">
+                      <img src="..//data_top/images/moyou_2.jpg" alt="モヨウフグの写真 2">
                     </div>
                     <div class="fish-content">
                         <h3>モヨウフグ</h3>
@@ -459,7 +459,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="https://via.placeholder.com/350x240/8B5A2B/FFFFFF?text=Kitamakura+1" alt="キタマクラの写真 1">
+                        <img src="..//data_top/images/kitamakura_1.jpg" alt="キタマクラの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>キタマクラ</h3>
