--- a/data_top/zukan.html
+++ b/data_top/zukan.html
@@ -91,10 +91,11 @@
         background-color: #f4f7f6; /* ギャラリーの背景色 */
     }
 
+    /* --- 写真のスタイル調整 --- */
     .photo-gallery img {
-        width: 80%; /* 画面幅の80% */
-        max-width: 350px; /* PCでの最大幅 */
-        height: 240px;
+        width: 85%; /* 画面幅の85% (少し大きく) */
+        max-width: 500px; /* PCでの最大幅 (350px -> 500pxへ拡大) */
+        aspect-ratio: 4 / 3; /* アスペクト比を4:3に固定 */
         object-fit: cover;
         border-radius: 8px;
         scroll-snap-align: center; /* 中央でスナップ */
@@ -173,8 +174,8 @@
                 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/madai_1.jpg" alt="マダイの写真 1">
-                        <img src="..//data_top/images/madai_2.jpg" alt="マダイの写真 2">
+                        <img src="../data_top/images/madai_1.jpg" alt="マダイの写真 1">
+                        <img src="../data_top/images/madai_2.jpg" alt="マダイの写真 2">
                     </div>
                     <div class="fish-content">
                         <h3>マダイ（真鯛）</h3>
@@ -195,7 +196,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/chidai_1.jpg" alt="チダイの写真 1">
+                        <img src="../data_top/images/chidai_1.jpg" alt="チダイの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>チダイ（血鯛）</h3>
@@ -216,7 +217,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/hedai_1.jpg" alt="ヘダイの写真 1">
+                        <img src="../data_top/images/hedai_1.jpg" alt="ヘダイの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ヘダイ（平鯛）</h3>
@@ -237,7 +238,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/mutsu_1.jpg" alt="ムツの写真 1">
+                        <img src="../data_top/images/mutsu_1.jpg" alt="ムツの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ムツ</h3>
@@ -258,8 +259,8 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/maaji_2.jpg" alt="マアジの写真 1">
-                        <img src="..//data_top/images/maaji_1.jpg" alt="マアジの写真 2">
+                        <img src="../data_top/images/maaji_2.jpg" alt="マアジの写真 1">
+                        <img src="../data_top/images/maaji_1.jpg" alt="マアジの写真 2">
                     </div>
                     <div class="fish-content">
                         <h3>マアジ（真鯵）</h3>
@@ -280,7 +281,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/kaiwari_1.jpg" alt="カイワリの写真 1">
+                        <img src="../data_top/images/kaiwari_1.jpg" alt="カイワリの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>カイワリ</h3>
@@ -301,7 +302,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/shimaaji_1.jpg" alt="シマアジの写真 1">
+                        <img src="../data_top/images/shimaaji_1.jpg" alt="シマアジの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>シマアジ（縞鯵）</h3>
@@ -322,8 +323,8 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/konoshiro_1.jpg" alt="コノシロの写真 1">
-                        <img src="..//data_top/images/konoshiro_2.jpg" alt="コノシロの写真 1">
+                        <img src="../data_top/images/konoshiro_1.jpg" alt="コノシロの写真 1">
+                        <img src="../data_top/images/konoshiro_2.jpg" alt="コノシロの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>コノシロ</h3>
@@ -344,7 +345,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/kataboshi_1.jpg" alt="カタボシイワシの写真 1">
+                        <img src="../data_top/images/kataboshi_1.jpg" alt="カタボシイワシの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>カタボシイワシ（肩星鰯）</h3>
@@ -365,7 +366,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/gima_1.jpg" alt="ギマの写真 1">
+                        <img src="../data_top/images/gima_1.jpg" alt="ギマの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ギマ</h3>
@@ -395,7 +396,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/hakofugu_1.jpg" alt="ハコフグの写真 1">
+                        <img src="../data_top/images/hakofugu_1.jpg" alt="ハコフグの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>ハコフグ</h3>
@@ -416,7 +417,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/setomino_1.jpg" alt="セトミノカサゴの写真 1">
+                        <img src="../data_top/images/setomino_1.jpg" alt="セトミノカサゴの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>セトミノカサゴ</h3>
@@ -437,8 +438,8 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                      <img src="..//data_top/images/moyou_1.jpg" alt="モヨウフグの写真 1">
-                      <img src="..//data_top/images/moyou_2.jpg" alt="モヨウフグの写真 2">
+                        <img src="../data_top/images/moyou_1.jpg" alt="モヨウフグの写真 1">
+                        <img src="../data_top/images/moyou_2.jpg" alt="モヨウフグの写真 2">
                     </div>
                     <div class="fish-content">
                         <h3>モヨウフグ</h3>
@@ -459,7 +460,7 @@
 
                 <article class="fish-card">
                     <div class="photo-gallery">
-                        <img src="..//data_top/images/kitamakura_1.jpg" alt="キタマクラの写真 1">
+                        <img src="../data_top/images/kitamakura_1.jpg" alt="キタマクラの写真 1">
                     </div>
                     <div class="fish-content">
                         <h3>キタマクラ</h3>
