--- a/header.html
+++ b/header.html
@@ -8,9 +8,9 @@
       </button>
       <div class="logo-container">
           <a href="../top_page.html" class="logo-link">
-            <img src="../image_f48d9f.png" alt="三保地引網 ロゴ" class="logo-img">
+            <img src="..images/jibiki_res.png" alt="三保地引網 ロゴ" class="logo-img">
           </a>
-          <img src="../fujioka_lab.jpg" alt="藤岡研究室 ロゴ" class="logo-img" id="fujioka-logo">
+          <img src="../images/fujioka_lab.jpg" alt="藤岡研究室 ロゴ" class="logo-img" id="fujioka-logo">
       </div>
     </div>
     <nav class="navbar" id="main-nav">
