--- a/top_page.html
+++ b/top_page.html
@@ -98,7 +98,7 @@
               <div class="highlights-grid">
                   <a href="/what_jibiki.html" class="card-link">
                     <div class="card">
-                      <div class="card-image-wrapper"><img src="/jibiki.jpg" alt="地引網を引く様子" class="card-img"></div>
+                      <div class="card-image-wrapper"><img src="../images/jibiki.jpg" alt="地引網を引く様子" class="card-img"></div>
                         <div class="card-content">
                             <h4 class="card-title lang-ja">地引網とは？</h4>
                             <h4 class="card-title lang-en" style="display:none;">A Sense of Unity</h4>
@@ -109,7 +109,7 @@
                   </a>
                   <a href="/data_top/data_top.html" class="card-link">
                     <div class="card">
-                        <div class="card-image-wrapper"><img src="/catch_fish.jpg" alt="とれたての魚" class="card-img"></div>
+                        <div class="card-image-wrapper"><img src="../images/catch_fish.jpg" alt="とれたての魚" class="card-img"></div>
                         <div class="card-content">
                             <h4 class="card-title lang-ja">海の幸との出会い</h4>
                             <h4 class="card-title lang-en" style="display:none;">Encounter with Seafood</h4>
@@ -120,7 +120,7 @@
                   </a>
                   <a href="/fujioka_lab/fujioka_top.html" class="card-link">
                     <div class="card">
-                        <div class="card-image-wrapper"><img src="/research.jpg" alt="魚の解説" class="card-img"></div>
+                        <div class="card-image-wrapper"><img src="../images/research.jpg" alt="魚の解説" class="card-img"></div>
                         <div class="card-content">
                             <h4 class="card-title lang-ja">海からの学び</h4>
                             <h4 class="card-title lang-en" style="display:none;">Learning from the Sea</h4>
@@ -139,7 +139,7 @@
               <h3 class="section-title lang-en" style="display:none;">Cooperating Organizations</h3>
               <div class="partner-logo">
                   <a href="https://www.mihojibiki.com/" target="_blank" rel="noopener noreferrer" title="三保地引網保存会（外部リンク）">
-                      <img src="/jinikihozonkai.jpg" alt="三保地引網保存会">
+                      <img src="../images/jinikihozonkai.jpg" alt="三保地引網保存会">
                       <p class="partner-name lang-ja">三保地引網保存会</p>
                       <p class="partner-name lang-en" style="display:none;">Miho Jibikiami Preservation Society</p>
                   </a>
