--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
       </button>
       <div class="logo-container">
           <a href="../top_page.html" class="logo-link">
-            <img src="..images/jibiki_res.png" alt="三保地引網 ロゴ" class="logo-img">
+            <img src="../images/jibiki_res.png" alt="三保地引網 ロゴ" class="logo-img">
           </a>
           <img src="../images/fujioka_lab.jpg" alt="藤岡研究室 ロゴ" class="logo-img" id="fujioka-logo">
       </div>
