--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer-grid">
       <div class="footer-about">
-        <a href="/top_page.html" class="logo-link"><img src="/image_f48d9f.png" alt="三保地引網 ロゴ" class="logo-img"></a>
+        <a href="/top_page.html" class="logo-link"><img src="../images/jibiki_res.png" alt="三保地引網 ロゴ" class="logo-img"></a>
         <p class="lang-ja" style="margin-top:1rem;">三保地引網 研究プロジェクト</p>
         <p class="lang-en" style="display:none; margin-top:1rem;">Miho Jibikiami Project</p>
       </div>
