--- a/top_page.html
+++ b/top_page.html
@@ -154,7 +154,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      const images = ['/top1.jpg', '/top2.jpg', '/top3.jpg', '/top4.jpg', '/top5.jpg'];
+      const images = ['../images/top1.jpg', '../images/top2.jpg', '../images/top3.jpg', '../images/top4.jpg', '../images/top5.jpg'];
       const sliderContainer = document.querySelector('.hero-slider');
       let currentImageIndex = 0;
 
