--- a/footer.html
+++ b/footer.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p class="lang-ja">&copy; 三保地引網 研究プロジェクト. All Rights Reserved.</p>
+      <p class="lang-ja">&copy; 東海大学 藤岡研究室 三保地引網研究プロジェクト. All Rights Reserved.</p>
       <p class="lang-en" style="display: none;">&copy; Tokai Univ. Fujioka Lab. . All Rights Reserved.</p>
     </div>
   </div>
