--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
         <span></span>
       </button>
       <div class="logo-container">
-          <a href="../top_page.html" class="logo-link">
+          <a href="../index.html" class="logo-link">
             <img src="../images/jibikires_icon.png" alt="三保地引網 ロゴ" class="logo-img">
           </a>
           <img src="../images/fujioka_lab.jpg" alt="藤岡研究室 ロゴ" class="logo-img" id="fujioka-logo">
