--- a/fujioka_lab/fujioka_top.html
+++ b/fujioka_lab/fujioka_top.html
@@ -131,21 +131,21 @@
                 <h2 class="section-title lang-en" style="display:none;">How Are We Researching?</h2>
                 <div class="method-grid">
                     <div class="method-card">
-                        <img src="/fujioka_lab/field_photo.jpg" alt="フィールドでの作業風景">
+                        <img src="../fujioka_lab/fujioka_lab/field_photo.jpg" alt="フィールドでの作業風景">
                         <h4 class="lang-ja">フィールドでの作業</h4>
                         <h4 class="lang-en" style="display:none;">Field Work</h4>
                         <p class="lang-ja">地引網でとれた魚を種類ごとに分け、数を数え、大きさを測定します。</p>
                         <p class="lang-en" style="display:none;">We sort the fish caught by the beach seine, count them, and measure their sizes.</p>
                     </div>
                     <div class="method-card">
-                        <img src="/fujioka_lab/gazokaiseki.jpg" alt="画像処理による魚の体長算出">
+                        <img src="../fujioka_lab/fujioka_lab/gazokaiseki.jpg" alt="画像処理による魚の体長算出">
                         <h4 class="lang-ja">画像処理による体長測定</h4>
                         <h4 class="lang-en" style="display:none;">Length Measurement via Image Processing</h4>
                         <p class="lang-ja">撮影した写真から、コンピュータを使って正確な魚の大きさを測ります。</p>
                         <p class="lang-en" style="display:none;">We use computers to accurately measure fish sizes from the photographs taken.</p>
                     </div>
                     <div class="method-card">
-                        <img src="/fujioka_lab/datakaiseki.jpg" alt="データ解析のイメージ">
+                        <img src="../fujioka_lab/fujioka_lab/datakaiseki.jpg" alt="データ解析のイメージ">
                         <h4 class="lang-ja">データ解析</h4>
                         <h4 class="lang-en" style="display:none;">Data Analysis</h4>
                         <p class="lang-ja">集めたデータと海の環境データを組み合わせて、魚の生態を統計的に分析します。</p>
@@ -172,7 +172,7 @@
             </section>
             <section class="content-section">
                 <div class="profile-section">
-                    <img src="/fujioka_lab/fujioka_ko.jpg" alt="藤岡紘 准教授" class="profile-image">
+                    <img src="../fujioka_lab/fujioka_lab/fujioka_ko.jpg" alt="藤岡紘 准教授" class="profile-image">
                     <div class="profile-text">
                         <h3 class="lang-ja">東海大学海洋学部海洋生物学科 藤岡研究室 
                           <br>藤岡 紘</h3>
