--- a/fujioka_lab/fujioka_top.html
+++ b/fujioka_lab/fujioka_top.html
@@ -117,6 +117,16 @@
         <p class="page-subtitle lang-ja">地引網で科学する、藤岡研究室の取り組み</p>
         <p class="page-subtitle lang-en" style="display:none;">The Fujioka Laboratory's approach to science with beach seining</p>
     </div>
+    
+    <div class="main-content">
+        <div class="container">
+            <section class="content-section">
+                <h2 class="section-title lang-ja">東海大学 海洋学部海洋生物学科 藤岡研究室</h2>
+                <h2 class="section-title lang-en" style="display:none;">What Are We Researching?</h2>
+                <p class="lang-ja">私たち、藤岡研究室では魚の生態に関する研究を行っています。</p>
+                <p class="lang-en" style="display:none;">Marine creatures can be broadly divided into three types: <b>swimmers, drifters, and bottom-dwellers</b>. We are interested in the "swimmers," especially fish. Fish can choose suitable locations by swimming, whether it's to avoid cold winter or hot summer temperatures, or to find a good place to lay eggs. Using the beach seine, we aim to clarify the ecology of fish by investigating how the catch changes with seasonal and environmental shifts.</p>
+            </section>
+    
     <div class="main-content">
         <div class="container">
             <section class="content-section">
