--- a/fujioka_lab/fujioka_top.html
+++ b/fujioka_lab/fujioka_top.html
@@ -130,7 +130,7 @@
     <div class="main-content">
         <div class="container">
             <section class="content-section">
-                <h2 class="section-title lang-ja">なにをしらべている？</h2>
+                <h2 class="section-title lang-ja">地引網でなにをしらべている？</h2>
                 <h2 class="section-title lang-en" style="display:none;">What Are We Researching?</h2>
                 <p class="lang-ja">海の生き物は、大きくわけて<b>泳ぐもの・漂うもの・海底にじっとするもの</b>の3種類に分けられます。私たちは「泳ぐもの」に興味があり、特に魚類について調べています。魚類は泳ぐことによって、自分が適している場所を選択することができます。それは、冬の低水温や夏の高水温を避けることであったり、卵を産むのに適した場所へ向かうことであったりします。地引網を使って、時期・環境の変化で獲れる魚がどのように変わるのかを調べ、魚の生態を明らかにしようと考えています。</p>
                 <p class="lang-en" style="display:none;">Marine creatures can be broadly divided into three types: <b>swimmers, drifters, and bottom-dwellers</b>. We are interested in the "swimmers," especially fish. Fish can choose suitable locations by swimming, whether it's to avoid cold winter or hot summer temperatures, or to find a good place to lay eggs. Using the beach seine, we aim to clarify the ecology of fish by investigating how the catch changes with seasonal and environmental shifts.</p>
